exports[`Main component renders correctly 1`] = `
<div>
  <div>
    <div
      className="top-bar">
      <div
        className="top-bar-left">
        <ul
          className="menu">
          <li
            className="menu-text">
            React Timer App
          </li>
          <li
            className="menu-text">
            <a
              onClick={[Function]}
              style={Object {}}>
              Timer
            </a>
          </li>
          <li
            className="menu-text">
            <a
              onClick={[Function]}
              style={Object {}}>
              Countdown
            </a>
          </li>
        </ul>
      </div>
      <div
        className="top-bar-right">
        <ul
          className="menu">
          <li
            className="menu-text">
            Powered by 
            <a
              href="https://www.ludobermejo.es">
              Ludo
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Nav renders correctly 1`] = `
<div
  className="top-bar">
  <div
    className="top-bar-left">
    <ul
      className="menu">
      <li
        className="menu-text">
        React Timer App
      </li>
      <li
        className="menu-text">
        <a
          onClick={[Function]}
          style={Object {}}>
          Timer
        </a>
      </li>
      <li
        className="menu-text">
        <a
          onClick={[Function]}
          style={Object {}}>
          Countdown
        </a>
      </li>
    </ul>
  </div>
  <div
    className="top-bar-right">
    <ul
      className="menu">
      <li
        className="menu-text">
        Powered by 
        <a
          href="https://www.ludobermejo.es">
          Ludo
        </a>
      </li>
    </ul>
  </div>
</div>
`;
